fix(ui): improve accessibility by adjusting outline-offset for better focus visibility in Tags feature

--- a/src/features/tags/tags.css
+++ b/src/features/tags/tags.css
@@ -39,7 +39,7 @@
 .tab-btn:focus,
 .tab-btn:focus-visible {
   outline: 2px solid #f0ad4e;
-  outline-offset: -2px;
+  outline-offset: 0;
   color: #fff;
 }
 
@@ -103,7 +103,7 @@
 
 .tag-search-input:focus {
   outline: 2px solid #f0ad4e;
-  outline-offset: -1px;
+  outline-offset: 0;
   border-color: #f0ad4e;
 }
 
@@ -119,7 +119,7 @@
 
 .theme-select:focus {
   outline: 2px solid #f0ad4e;
-  outline-offset: -1px;
+  outline-offset: 0;
   border-color: #f0ad4e;
 }
 
@@ -351,7 +351,7 @@
 
 .add-tag-input:focus {
   outline: 2px solid #f0ad4e;
-  outline-offset: -1px;
+  outline-offset: 0;
   border-color: #f0ad4e;
 }
 
